--- a/source/Example.MvcApplication/Views/Blog/Read.cshtml
+++ b/source/Example.MvcApplication/Views/Blog/Read.cshtml
@@ -1,8 +1,26 @@
 ﻿@model Example.MvcApplication.Models.BlogEntryModel
 
 @{
-    ViewBag.Title = "title";
-    Layout = "_Layout";
+    ViewBag.Title = "Blog - "+ Model.Title;
 }
 
-<h2>title</h2>
+<article>
+    <header>
+        <h2>@Model.Title</h2>
+        <h3>@Model.Author</h3>
+        <h4><time pubdate datetime="@Model.PublishedOn.Rfc">@Model.PublishedOn.Display</time></h4>
+
+        @Html.Raw(Model.Summary)
+    </header>
+    
+    @Html.Raw(Model.Content)
+    
+    <footer>
+        <p>Tags: 
+            @{foreach (var tag in Model.Tags)
+            {
+                <a href="@Url.Action("Index",new{search=tag})">@tag</a>
+            }}
+        </p>
+    </footer>
+</article>
