4 cols on bigger screens

--- a/source/Antix.Web.AngularJS.Components/angularjs-components/components/cell-layout/cell-layout.less
+++ b/source/Antix.Web.AngularJS.Components/angularjs-components/components/cell-layout/cell-layout.less
@@ -1,12 +1,18 @@
 ﻿.cell-layout-demo {
 
     .cell-layout-cell {
-        width: 33.3333%;
+        width: 25%;
         padding: 0 15px 15px 0;
 
         .cell-layout-cell-content {
             box-shadow: 1px 1px 10px rgba(0,0,0,.1);
             padding: 15px;
+        }
+    }
+
+    @media (max-width:1200px) {
+        .cell-layout-cell {
+            width: 33.3333%;
         }
     }
 
