--- a/source/Antix.Web.AngularJS.Components/angularjs-components/components/cell-layout/cell-layout.css
+++ b/source/Antix.Web.AngularJS.Components/angularjs-components/components/cell-layout/cell-layout.css
@@ -1,10 +1,15 @@
 ﻿.cell-layout-demo .cell-layout-cell {
-  width: 33.3333%;
+  width: 25%;
   padding: 0 15px 15px 0;
 }
 .cell-layout-demo .cell-layout-cell .cell-layout-cell-content {
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
   padding: 15px;
+}
+@media (max-width: 1200px) {
+  .cell-layout-demo .cell-layout-cell {
+    width: 33.3333%;
+  }
 }
 @media (max-width: 900px) {
   .cell-layout-demo .cell-layout-cell {
