added icon and readme for cell-layout

--- a/source/Antix.Code.Web/angularjs-components/home/home.cshtml
+++ b/source/Antix.Code.Web/angularjs-components/home/home.cshtml
@@ -14,7 +14,7 @@
                     like css float, but works with
                     cells having different heights
                 </p>
-                <p><a href="/#/components/cell-layout/">more &hellip;</a></p>
+                <p><a href="/#/cell-layout/">more &hellip;</a></p>
             </div>
         </div>
 
